<resources>
    <string name="app_name">Calculadora</string>

    <!-- Others -->
    <string name="clear">C</string>
    <string name="point">.</string>

    <!-- Operations -->
    <string name="division">/</string>
    <string name="multiplication">X</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="percentage">%</string>
    <string name="sqrt">sqrt</string>
    <string name="exp">^</string>

    <!-- Numbers -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="todo">TODO</string>
    <string name="tipo_calculadora">Tipo Calculadora</string>
    <string name="simples">Simples</string>
    <string name="avan_ada">Avançada</string>
    <string name="salvar_configura_es">Salvar Configurações</string>
    <string name="configura_es">Configurações</string>
</resources>