<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="40sp"
        tools:text="00.0" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:text="00.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/clear"
            style="@style/operators_button"
            android:text="@string/clear" />

        <TextView
            android:id="@+id/division"
            style="@style/operators_button"
            android:text="@string/division" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/seven"
            style="@style/numbers_button"
            android:text="@string/seven" />
        <TextView
            android:id="@+id/eight"
            style="@style/numbers_button"
            android:text="@string/eight" />
        <TextView
            android:id="@+id/nine"
            style="@style/numbers_button"
            android:text="@string/nine" />
        <TextView
            android:id="@+id/multiplication"
            style="@style/operators_button"
            android:text="@string/multiplication" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/four"
            style="@style/numbers_button"
            android:text="@string/four" />
        <TextView
            android:id="@+id/five"
            style="@style/numbers_button"
            android:text="@string/five" />
        <TextView
            android:id="@+id/six"
            style="@style/numbers_button"
            android:text="@string/six" />
        <TextView
            android:id="@+id/subtraction"
            style="@style/operators_button"
            android:text="@string/subtraction" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/one"
            style="@style/numbers_button"
            android:text="@string/one" />
        <TextView
            android:id="@+id/two"
            style="@style/numbers_button"
            android:text="@string/two" />
        <TextView
            android:id="@+id/three"
            style="@style/numbers_button"
            android:text="@string/three" />
        <TextView
            android:id="@+id/addition"
            style="@style/operators_button"
            android:text="@string/addition" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/point"
            style="@style/numbers_button"
            android:text="@string/point" />
        <TextView
            android:id="@+id/zero"
            style="@style/numbers_button"
            android:text="@string/zero" />

        <ImageView
            android:id="@+id/backspace"
            style="@style/numbers_button"
            android:src="@drawable/ic_baseline_backspace_24"
            android:scaleType="center" />

        <TextView
            android:id="@+id/equal"
            style="@style/operators_button"
            android:text="@string/equal" />
    </LinearLayout>

</LinearLayout>